kubernetes/postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-persistence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-persistence
  template:
    metadata:
      labels:
        app: postgres-persistence
    spec:
      containers:
      - name: postgres-persistence
        image: postgres:14.4
        volumeMounts:
          - name: postgres-persistence-volume
            mountPath: /var/lib/postgresql/data
            subPath: portal #trick un peu arnaque pour éviter le dossier lost+found
          - name: dump
            mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-persistence-volume
        persistentVolumeClaim:
          claimName: pvc
      - name: dump
        emptyDir: {}
  


#access_key: YXGVlEPBDIN5SxAh
# secret_key:uLR246ioJv6euyKsSCtWCpeEfI9nm0vZ

#avoir credentials temporaires: env | grep -i mc
#si privé: mc alias set toto https://minio.lab.sspcloud.fr access_key secret_key
#si publique :  wget https://minio.lab.sspcloud.fr/nrandriamanana/script_sql_bdd.sql -O /tmp/oto.sql
#copier et coller dans le bucket : mc cp toto s3/nrandriamanana/toto  (alias/nrandriamanana/toto)
#importer depuis le bucket: mc cp s3/nrandriamanana/script_sql_bdd.sql .

#check crédential créé pour accès au bucket: env | grep -i mc
