kubernetes/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-persistence
spec:
  selector:
    app: postgres-persistence
  ports:
  - port: 5432
    targetPort: 5432
