kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    name: api
spec:
  tls:
    - hosts: 
      - ensaeats-api.lab.sspcloud.fr

  rules:
  - host: ensaeats-api.lab.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port: 
              number: 80
